--- a/templates/result.html
+++ b/templates/result.html
@@ -3,11 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>DNA Analysis Report</title>
+    <title>Data</title>
 </head>
 <body>
     <!-- Use Flask's include function to include the content of the temporary HTML file -->
-    {{ result_content | safe}}
+    {% for row in PAM_option %}
+        {{ row }}
+        <br>
+        {{ result_content[0][row]}}
+    {% endfor %}
+    <br>
     {{ result_content2| safe}}
 
 </body>
