Update jinja include, data.html, result.html, error message. Need to think about other data storage method

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
     <form action="/upload" method="post" enctype="multipart/form-data">
         <label for="file">Choose a file:</label>
         <input type="file" id="file" name="file" accept="*" />
-        <button type="submit">upload</button>
+        <button type="submit">upload</button> {{message}}
         <br><br>
     </form>
     <form action="/analyze" method="post" enctype="multipart/form-data">  
@@ -26,11 +26,15 @@
         <button type="submit">Analyze</button>        
         <br /><br>
     </form>
+    {% if not PAM_option %}
     {% for row in result_content %}
     <div>Name: {{row[0]}}</div>
     <div>Sequence: {{row[1]}}</div>
     {% endfor %}
+    {% endif %}
     <br>
-
+    {% if PAM_option %}
+    {% include 'result.html' %}
+    {% endif %}
 </body>
 </html>
