--- a/templates/index5.html
+++ b/templates/index5.html
@@ -17,5 +17,8 @@
         <br /><br>
         <button type="submit">Analyze</button>
     </form>
+
+    {{result_content | safe}}
+    {{result_content2 | safe}}
 </body>
 </html>
